fix: improved table and header visibility

--- a/themes/hugo-blog-awesome/assets/sass/_dark.scss
+++ b/themes/hugo-blog-awesome/assets/sass/_dark.scss
@@ -14,17 +14,25 @@
     color: $dark-white;
   }
 
+  h3 {
+    color: $blue;
+  }
+
+  h4 {
+    color: $yellow
+  }
+
   // Table
   table {
     thead {
       color: $dark-white;
-      border-color: $dark-light;
+      border-color: $dark-smoke;
     }
 
     th,
     td,
     tr {
-      border-color: $dark-light;
+      border-color: $dark-smoke;
     }
   }
 
