--- a/themes/hugo-blog-awesome/assets/sass/main.scss
+++ b/themes/hugo-blog-awesome/assets/sass/main.scss
@@ -15,6 +15,8 @@ $light: #ececec;
 $smoke: #d2c7c7;
 $gray: #6b7886;
 $white: #fff;
+$blue: #2e80f2;
+$yellow: #e5b567;
 
 //////////////// 2. Dark Colors /////////////////
 $dark-text-base-color: #babdc4;
